--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
   "dependencies": {
     "axios": "^1.1.3",
     "change-case": "^4.1.2",
+    "node-fetch": "2",
     "querystring": "^0.2.1",
+    "socks-proxy-agent": "^7.0.0",
     "yargs": "^17.6.0"
   }
 }
